feat: Implement comprehensive story and chapter management including backend API and frontend UI.